--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.murzin.numbertrainer"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.2" >
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-sdk
         android:minSdkVersion="11"
@@ -15,7 +15,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.murzin.numbertrainer.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenLayout|screenSize"
+            android:screenOrientation="portrait" 
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
